Source/WebKit/NetworkProcess/ServiceWorker/WebSWServerConnection.cpp
@@ -460,9 +460,12 @@ void WebSWServerConnection::unregisterServiceWorkerClient(const ScriptExecutionC
     });
 
     if (isDeletedOrigin) {
-        if (auto* contextConnection = server().contextConnectionForRegistrableDomain(RegistrableDomain { clientOrigin.clientOrigin })) {
-            auto& connection = static_cast<WebSWServerToContextConnection&>(*contextConnection);
-            m_networkProcess->parentProcessConnection()->send(Messages::NetworkProcessProxy::UnregisterRemoteWorkerClientProcess { RemoteWorkerType::ServiceWorker, identifier(), connection.webProcessIdentifier() }, 0);
+        RegistrableDomain potentiallyRemovedDomain { clientOrigin.clientOrigin };
+        if (!hasMatchingClient(potentiallyRemovedDomain)) {
+            if (auto* contextConnection = server().contextConnectionForRegistrableDomain(potentiallyRemovedDomain)) {
+                auto& connection = static_cast<WebSWServerToContextConnection&>(*contextConnection);
+                m_networkProcess->parentProcessConnection()->send(Messages::NetworkProcessProxy::UnregisterRemoteWorkerClientProcess { RemoteWorkerType::ServiceWorker, identifier(), connection.webProcessIdentifier() }, 0);
+            }
         }
     }
 }
